Fix: dark mode colours for portfolio buttons

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -431,7 +431,7 @@ header {
                 transition: all .4s ease-in-out;
                 .port-title {
                     font-size: 1rem;
-                    color: var(--color-primary);
+                    color: var(--color-white);
                     margin-bottom: 1.5rem;
                 }
                 .icons {
